--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "",
   "private": true,
   "license": "UNLICENSED",
-   "prisma": {
+  "prisma": {
     "seed": "ts-node prisma/seed.ts"
   },
   "scripts": {
@@ -52,6 +52,8 @@
     "cross-env": "7.0.3",
     "date-fns": "4.1.0",
     "dayjs": "1.11.13",
+    "ffprobe-static": "^3.1.0",
+    "fluent-ffmpeg": "^2.1.3",
     "helmet": "8.1.0",
     "ioredis": "^5.6.1",
     "multer": "^1.4.5-lts.1",
