--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "date-fns": "4.1.0",
     "dayjs": "1.11.13",
     "ffprobe-static": "^3.1.0",
+    "firebase-admin": "^13.6.1",
     "fluent-ffmpeg": "^2.1.3",
     "helmet": "8.1.0",
     "ioredis": "^5.6.1",
